Fixed annoying overflow on bot axis

--- a/style.css
+++ b/style.css
@@ -73,10 +73,17 @@
     border-radius: var(--border-radius-small);
 }
 
+html,
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
 body {
     font-family: var(--font-primary);
     color: var(--color-secondary);
-    overflow: hidden;
+    overflow-y: auto;
     height: 100vh;
     width: 100%;
     height: 100%;
@@ -169,8 +176,12 @@ body {
     grid-template-columns: 250px repeat(2, 1fr) 300px;
     grid-template-rows: repeat(5, 1fr);
     gap: 15px;
+    padding: 0 var(--spacing-medium);
     height: 100vh;
-    padding: 20px;
+    width: 100%;
+    max-width: 100vw;
+    overflow-x: hidden;
+    padding: var(--spacing-large);
     margin: 0 auto;
 }
 
@@ -181,6 +192,7 @@ body {
     background: rgba(13, 20, 30, 0.85);
     padding: var(--spacing-large);
     position: relative;
+    overflow-x: hidden;
 
     clip-path: polygon(
         var(--clip-offset) 0,
@@ -359,7 +371,7 @@ h3,
 .main-text {
     font-size: 1.1rem;
     line-height: 1.6;
-    margin-bottom: var(--spacing-medium);
+    margin-bottom: var(--spacing-xl);
     text-align: justify;
 }
 
@@ -375,7 +387,7 @@ h3,
     gap: 8px;
     background: rgba(0, 204, 255, 0.02);
     padding: 6px 8px;
-    margin-bottom: var(--spacing-small);
+    margin: 8px 0;
     border-radius: var(--border-radius-small);
     border: rgba(0, 204, 255, var(--opacity-faint));
 }
